# celerity

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md
.github/workflows/: ci.yml
perf/: README.md  celerity_lat_results.csv  celerity_thr_results.csv  libzmq_lat_results.csv  libzmq_thr_results.csv  run_lat.sh  run_thr.sh
src/: lib.rs  pattern.rs  peer.rs  wire.rs
src/io/: endpoint.rs  mod.rs  runtime.rs  socket.rs  transport.rs
src/security/: mod.rs  null.rs
src/security/curve/: crypto.rs  message.rs  mod.rs
tests/: cel_cat.rs  perf_bins.rs  public_api.rs  tokio_io.rs
