[package]
name = "celerity"
version = "0.1.0"
edition = "2024"
authors = ["shemtorga@gmail.com", "okechshem75@gmail.com"]
description = "Pure Rust sans-IO ZMTP 3.1 messaging core with Tokio TCP and Unix socket transports."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShemShadrack/celerity"
readme = "README.md"
keywords = ["zmtp", "zeromq", "tokio", "ipc", "messaging"]
categories = ["network-programming", "asynchronous", "command-line-utilities", "cryptography"]

[lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = "warn"
# nursery = "warn"

[features]
default = []
tokio = ["dep:tokio"]
cli = ["tokio", "dep:clap"]
ipc = ["tokio"]
curve = [
    "dep:chacha20poly1305",
    "dep:hkdf",
    "dep:rand_core",
    "dep:sha2",
    "dep:x25519-dalek",
    "dep:zeroize",
]

[dependencies]
bitflags = "2.6"
bytes = "1.10"
thiserror = "2.0"
tokio = { version = "1.48", optional = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
clap = { version = "4.5", optional = true, features = ["derive"] }
chacha20poly1305 = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
rand_core = { version = "0.6", optional = true, features = ["getrandom"] }
sha2 = { version = "0.10", optional = true }
x25519-dalek = { version = "2.0", optional = true, default-features = false, features = ["static_secrets"] }
zeroize = { version = "1.8", optional = true }
libc = "0.2"

[[bin]]
name = "cel-cat"
path = "src/bin/cel_cat.rs"
required-features = ["cli"]
